--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@
 PORT = 5000
 MONGO_CONNECTION_URL = mongodb+srv://ssivakumar358:lyzZJLkCgFrOMVP4@cluster0.kyumxs1.mongodb.net/
 PASSWORD = lyzZJLkCgFrOMVP4
+JWT_ACCESS_SECRET_KEY = oqxb@15sjjalk
+JWT_REFRESH_SECRET_KEY = neoifwei093jlkn@65*nmseh
