--- a/.env
+++ b/.env
@@ -9,3 +9,6 @@ JWT_ACCESS_SECRET_KEY = oqxb@15sjjalk
 #nodemailer
 USER_EMAIL = tamilwebdevsiva@gmail.com
 MAIL_PASSWORD = axnlutacbmotrdwz
+
+#frontend url
+URL = https://my-blog-wzcd.onrender.com
