adding-frontend-url-cors

--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ USER_EMAIL = tamilwebdevsiva@gmail.com
 MAIL_PASSWORD = axnlutacbmotrdwz
 
 #frontend url
-URL = https://my-blog-wzcd.onrender.com
+URL = https://your-blog-mern.netlify.app/
