adding-server-address

--- a/.env
+++ b/.env
@@ -12,3 +12,4 @@ MAIL_PASSWORD = axnlutacbmotrdwz
 
 #frontend url
 URL = https://your-blog-mern.netlify.app/
+SERVER_ADDRESS = https://my-blog-wzcd.onrender.com
